Remove borders on small devices. Fixed some list syntax.

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -13,8 +13,6 @@
 html, body { height: 100%; }
 
 body {
-  /*background-color: #FFF;*/
-  /*background-color: #b7c3d7;*/
   background-color: #000;
   font-family: 'Libre Baskerville', serif;
   font-size: small;
@@ -91,6 +89,12 @@ $column-background-color: rgba(220, 233, 255, 0.8);
 /* Site
 /*
 /*****************************************************************************/
+
+@media (max-width: 768px) {
+  .site {
+     padding: 0;
+  }
+}
 
 #gravatar {
   float: left;
